Fix resource group references

--- a/nestedtemplates/appSvc.json
+++ b/nestedtemplates/appSvc.json
@@ -13,15 +13,21 @@
             "metadata": {
                 "description": "Name of company or organization for certificate subject"
             }
+        },
+        "location": {
+            "type": "string",
+            "metadata": {
+                "description": "Resource Grouü"
+            }
         }
     },
-    
+
     "resources": [
         {
             "apiVersion": "2019-08-01",
             "type": "Microsoft.Web/serverfarms",
             "name": "[parameters('AppServicePlanName')]",
-            "location": "[resourceGroup().location]",
+            "location": "[parameters('location')]",
             "sku": {
                 "Tier": "Standard",
                 "Name": "S1"
@@ -36,7 +42,7 @@
             "apiVersion": "2019-08-01",
             "type": "Microsoft.Web/sites",
             "name": "[parameters('appServiceName')]",
-            "location": "[resourceGroup().location]",
+            "location": "[parameters('location')]",
             "identity": {
                 "principalId": "",
                 "tenantId": "",
