--- a/nestedtemplates/appConfig.json
+++ b/nestedtemplates/appConfig.json
@@ -51,6 +51,12 @@
                 "description": "The base URI where artifacts required by this template are located including a trailing '/'"
             },
             "defaultValue": "[uri(deployment().properties.templatelink.uri,'Artifacts.zip')]"
+        },
+        "location": {
+            "type": "string",
+            "metadata": {
+                "description": "Resource Grouü"
+            }
         }
     },
     "variables": {
@@ -61,7 +67,7 @@
             "apiVersion": "2019-08-01",
             "type": "Microsoft.Web/sites",
             "name": "[parameters('appServiceName')]",
-            "location": "[resourceGroup().location]",
+            "location": "[parameters('location')]",
             "properties": {
                 "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', parameters('AppServicePlanName'))]",
                 "httpsOnly": false,
