--- a/nestedtemplates/appIdentity.json
+++ b/nestedtemplates/appIdentity.json
@@ -60,7 +60,7 @@
                 "azPowerShellVersion": "5.0",
                 "timeout": "PT30M",
                 //"scriptContent": "Write-Host 'Hello World'",
-                "primaryScrptUri": "https://raw.githubusercontent.com/scepman/install/feature-certmaster/addpermissions.ps1",
+                "primaryScriptUri": "https://raw.githubusercontent.com/scepman/install/feature-certmaster/addpermissions.ps1",
                 "cleanupPreference": "OnSuccess",
                 "retentionInterval": "P1D",
                 "arguments": "[concat('-TenantId \"', subscription().tenantId, '\" -ResourceGroup \"', parameters('location'), '\" -WebAppName \"scepman-webapp\"')]"
